--- a/index.html
+++ b/index.html
@@ -1,13 +1,7 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>reCAPTCHA demo</title>
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-  </head>
-  <body>
-    <form action="?" method="POST">
-      <div class="g-recaptcha" data-sitekey="6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI"></div>
-      <br/>
-      <input type="submit" value="Submit">
-    </form>
-  </body>
+<body>
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
+</body>
 </html>
